[gd_scene load_steps=7 format=3 uid="uid://df0aprb3es06q"]

[ext_resource type="Theme" uid="uid://dscoud45evf4j" path="res://scenes/ui/main_theme.tres" id="1_g44j8"]
[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_l4tpd"]
[ext_resource type="Texture2D" uid="uid://37sqnpv1s04y" path="res://graphics/ui/bullet.png" id="1_ls2e3"]
[ext_resource type="Texture2D" uid="uid://dq8ja8o466q2i" path="res://graphics/ui/grenade.png" id="2_2nscx"]
[ext_resource type="Texture2D" uid="uid://cy4k66jahns3x" path="res://graphics/ui/progress_bar/bg.png" id="4_jge18"]
[ext_resource type="Texture2D" uid="uid://4swprafhqx0r" path="res://graphics/ui/progress_bar/progress.png" id="5_7l6va"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_l4tpd")

[node name="AmmoContainerH" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.95
anchor_right = 0.05
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="LaserCounter" type="Control" parent="AmmoContainerH"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AmmoContainerH/LaserCounter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="AmmoContainerH/LaserCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_g44j8")
text = "20"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AmmoContainerH/LaserCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ls2e3")
expand_mode = 4

[node name="GrenadeCounter" type="Control" parent="AmmoContainerH"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AmmoContainerH/GrenadeCounter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="AmmoContainerH/GrenadeCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_g44j8")
text = "3"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="AmmoContainerH/GrenadeCounter/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="TextureRect" type="TextureRect" parent="AmmoContainerH/GrenadeCounter/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_2nscx")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
max_value = 50.0
value = 25.0
texture_under = ExtResource("4_jge18")
texture_progress = ExtResource("5_7l6va")
